--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
+/* 4 */
+.roboto{
+  font-family: var(--font-roboto);
+}
+.playfair{
+  font-family: var(--font-playfair);
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
